// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ShowBandlistModal when "REVIEW LAST ROUND" button is clicked 1`] = `
<div>
  <div
    className="buttons-container"
  >
    <div
      className="new-game-button"
      onClick={[Function]}
      title="Start new game"
    >
      <SvgBfPlayAVit />
    </div>
    <button
      className="show-modal-button"
      onClick={[Function]}
    >
      REVIEW LAST ROUND
    </button>
  </div>
  <ShowBandlistModal
    bands={
      Array [
        Object {
          "name": "one",
          "url": "www.1img.com",
        },
        Object {
          "name": "two",
          "url": "www.2img.com",
        },
        Object {
          "name": "three",
          "url": "www.3img.com",
        },
      ]
    }
    closeModal={[Function]}
    showModal={true}
  />
</div>
`;

exports[`should render with <Play /> when inGame is true 1`] = `
<div>
  <Connect(Play) />
  <ShowBandlistModal
    closeModal={[Function]}
    showModal={false}
  />
</div>
`;

exports[`should render with PLAY <button> and Review... <button> when inGame is false and bands.length > 0 1`] = `
<div>
  <div
    className="buttons-container"
  >
    <div
      className="new-game-button"
      onClick={[Function]}
      title="Start new game"
    >
      <SvgBfPlayAVit />
    </div>
    <button
      className="show-modal-button"
      onClick={[Function]}
    >
      REVIEW LAST ROUND
    </button>
  </div>
  <ShowBandlistModal
    bands={
      Array [
        Object {
          "name": "one",
          "url": "www.1img.com",
        },
        Object {
          "name": "two",
          "url": "www.2img.com",
        },
        Object {
          "name": "three",
          "url": "www.3img.com",
        },
      ]
    }
    closeModal={[Function]}
    showModal={false}
  />
</div>
`;

exports[`should render with PLAY <button> when inGame is false 1`] = `
<div>
  <div
    className="buttons-container"
  >
    <div
      className="new-game-button"
      onClick={[Function]}
      title="Start new game"
    >
      <SvgBfPlayAVit />
    </div>
  </div>
  <ShowBandlistModal
    bands={Array []}
    closeModal={[Function]}
    showModal={false}
  />
</div>
`;
